[package]
name = "wad"
description = "A library with utility binaries for reading WAD files compatible with the Doom game engine"
version = "0.3.0"
authors = ["Magnus Hovland Hoff <maghoff@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/maghoff/wad/"

[dependencies]
byteorder = "1.2.7"
structopt = "0.2.14"
